Update demo link in index.html

--- a/testgame/index.html
+++ b/testgame/index.html
@@ -6,7 +6,7 @@ https://github.com/kalbfled/pncgame
 Please read LICENSE, on Github, for more information.
 
 This demo references untracked image and audio resources.
-To see the demo in action, visit http://www.purdone.com/dave/pncgame/.
+To see the demo in action, visit https://misc.davejk.me/pncgame/.
 -->
 
 <html lang="en-us">
